--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My second commit</title>
+    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+  <h1>Microverse</h1>
+      <header id="title">Tribute By Chris and Nahom</header>
+
+      <main id="main">
+      <div id="img-div">
+        <img id="image" src="https://www.google.com/search?q=african+people&tbm=isch&ved=2ahUKEwjdyKTg-oL7AhXOSaQEHYqHBQkQ2-cCegQIABAA&oq=african+people&gs_lcp=CgNpbWcQAzIFCAAQgAQyBQgAEIAEMgUIABCABDIFCAAQgAQyBQgAEIAEMgQIABAeMgQIABAeMgQIABAeMgQIABAeMgQIABAeOgQIIxAnOgQIABBDOgcIIxDqAhAnULYHWK4-YLRFaAFwAHgEgAHUBYgB8DmSAQwyLTEyLjMuMC40LjGYAQCgAQGqAQtnd3Mtd2l6LWltZ7ABCsABAQ&sclient=img&ei=ks9bY923Ds6TkdUPio-WSA&bih=948&biw=1920#imgrc=mQxxn0QBAYesFM">
+        <div id="img-caption">How great are peoples of africa.</div>
+      </div>
+      <p id="tribute-info">Pack of 20 Illustrated flat vector African people and kids, Perfect for your architectural drawings, sections, elevations, post digital drawings, </p>
+      <label><a id="tribute-link" href="https://www.google.com/search?q=african+people&tbm=isch&ved=2ahUKEwjdyKTg-oL7AhXOSaQEHYqHBQkQ2-cCegQIABAA&oq=african+people&gs_lcp=CgNpbWcQAzIFCAAQgAQyBQgAEIAEMgUIABCABDIFCAAQgAQyBQgAEIAEMgQIABAeMgQIABAeMgQIABAeMgQIABAeMgQIABAeOgQIIxAnOgQIABBDOgcIIxDqAhAnULYHWK4-YLRFaAFwAHgEgAHUBYgB8DmSAQwyLTEyLjMuMC40LjGYAQCgAQGqAQtnd3Mtd2l6LWltZ7ABCsABAQ&sclient=img&ei=ks9bY923Ds6TkdUPio-WSA&bih=948&biw=1920#imgrc=mQxxn0QBAYesFM" target="_blank">link to the image</a></label>
+ </main>   
 </body>
 </html>
